src/Calculator.css
/* Change size of rem for small screens so we fit all the way down to 150px width */
@media (max-width: 250px) {
  html {
    font-size: 8px;
  }
}

.Calculator {
  max-width: 30rem;
  padding: 2rem;
}

.Calculator--large {
  max-width: none;
}

.Calculator-result {
  background-color: rgba(161, 161, 197, 0.6);
  text-align: right;
  padding: 0.5rem 1rem;
  margin-bottom: 0;
}

.Calculator-inputs {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 1rem;
  background-color: rgba(17, 17, 22, 0.9);
  color: #fff;
  padding: 1rem;
}

